# architecture-tooling

./: .gitignore  Cargo.toml  README.md  architecture.ttl  download-togaf.sh  test.md
features/: knowledge.feature
src/: components.sparql  document.rs  document_workflow.rs  knowledge.rs  lib.rs  main.rs  test.md
src/architecture/: component_ids.sparql  components.sparql  describe.sparql  mod.rs  relations.sparql
src/knowledge/: live.rs  mod.rs
tests/: cucumber.rs
tests/knowledge_steps/: mod.rs
