[package]
name = "tooling"
version = "0.1.0"
authors = ["Sander Dijkhuis <mail@sanderdijkhuis.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
async-trait = "0.1.24"
uuid = { version = "0.8", features = ["v4"] }
rdf = "0.1.4"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"
pulldown-cmark = "0.7.1"
graph-store = "0.3.0"

[[test]]
name = "cucumber"
harness = false

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
tokio-test = "0.2.1"
